# InfraBase

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
Clients/: CMakeLists.txt
Clients/SockCL/: CMakeLists.txt
Clients/SockCL/private/: Bootstrap.h
Clients/SockCL/source/: Bootstrap.cpp  Main.cpp
Libs/Core/: CMakeLists.txt
Libs/Core/public/IB/: Config.h  Core.h  Logger.h  Socket.h
Libs/Core/source/: Logger.cpp  Socket.cpp
Servers/: CMakeLists.txt
Servers/KeyValue/: CMakeLists.txt
Servers/KeyValue/private/: Bootstrap.h
Servers/KeyValue/source/: Bootstrap.cpp  Main.cpp
